--- a/src/screens/OrganizationDashboard/OrganizationDashboard.module.css
+++ b/src/screens/OrganizationDashboard/OrganizationDashboard.module.css
@@ -22,3 +22,6 @@
   justify-content: center;
   align-items: center;
 }
+.BottomRow {
+  margin-top: 45px;
+}
